fix z-index

--- a/web/app.css
+++ b/web/app.css
@@ -119,6 +119,7 @@ body {
     width: 50%;
     height: 100vh;
     background: var(--color-bg);
+    z-index: 10;
     transform: translateX(100%);
     transition: transform 0.3s ease;
 }
